# nuscenes-devkit

./: .gitignore  README.md  pyproject.toml
docs/: installation.md
python-sdk/nuscenes_devkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
