[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nuscenes-devkit"
version = "1.1.11"
authors = [
    { name = "Holger Caesar" },
    { name = "Oscar Beijbom" },
    { name = "Qiang Xu" },
    { name = "Varun Bankiti" },
    { name = "Alex H. Lang" },
    { name = "Sourabh Vora" },
    { name = "Venice Erin Liong" },
    { name = "Sergi Widjaja" },
    { name = "Kiwoo Shin" },
    { name = "Caglayan Dicle" },
    { name = "Freddy Boulton" },
    { name = "Whye Kit Fong" },
    { name = "Asha Asvathaman" },
    { name = "Lubing Zhou" },
    { email = "nuscenes@motional.com" } # Assuming the email is for the group
]
description = "The official devkit of the nuScenes dataset (www.nuscenes.org)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" } # Or use file = "LICENSE.txt" if license text is preferred from file
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "License :: Free for non-commercial use", # This seems more specific than Apache-2.0, keeping it
]

dependencies = [
    "cachetools",
    "descartes",
    "fire",
    "matplotlib<3.6.0",
    "numpy>=1.23.0,<2.0.0",
    "opencv-python>=4.5.4.58",
    "Pillow>6.2.1",
    "pyquaternion>=0.9.5",
    "scikit-learn",
    "scipy",
    "Shapely<2.0.0",
    "tqdm",
    "parameterized",
    "pycocotools>=2.0.1",
]

[project.optional-dependencies]
prediction = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
]
tracking = [
    "motmetrics<=1.1.3",
    "pandas>=0.24",
]
# It's good practice to have an 'all' or 'dev' group for convenience
dev = [
    "nuscenes-devkit[prediction,tracking]", # This line refers to the package itself with its extras
]

[project.urls]
Homepage = "https://github.com/nutonomy/nuscenes-devkit"
Repository = "https://github.com/nutonomy/nuscenes-devkit"
Documentation = "https://www.nuscenes.org/docs" # Placeholder, can be updated if a more specific devkit doc URL exists
Changelog = "https://github.com/nutonomy/nuscenes-devkit/blob/master/README.md#changelog" # Link to changelog in README

[tool.setuptools]
# This tells setuptools that your actual package code is in the 'python-sdk' directory
package-dir = {"" = "python-sdk"}
# include_package_data = true # Already in setup.py, setuptools might pick this up or handle via MANIFEST.in (which doesn't exist)

[tool.setuptools.packages.find]
where = ["python-sdk"]  # Look for packages in python-sdk
# The original script filtered out __pycache__, find_packages does this by default.
# It did not explicitly exclude tests, so we will keep it that way unless issues arise.

[tool.setuptools.package-data]
"*" = ["*.json"] # Replicates package_data={'': ['*.json']}
